<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EpiAndroid</string>
    <string name="loginText">login_x</string>
    <string name="passwordText">Password (UNIX)</string>
    <string name="loginButton">LOGIN</string>
    <string name="loginComplete">Welcome !</string>
    <string name="loginError">Error</string>
    <string name="loginFailedError">Incorrect password</string>
    <string name="loginServerError">Internal server error</string>
    <string name="loginStateText">Welcome</string>

    <array name="nav_drawer_items">
        <item>Profile</item>
        <item>Projects</item>
        <item>Planning</item>
        <item>Activities</item>
        <item>Marks</item>
    </array>

    <string name="semester">Semester</string>
    <string name="logtime_insufficient_warn1">Your log time is inferior than the minimal required</string>
    <string name="logtime_insufficient_warn2">Your log time is not sufficient. Try harder!</string>
    <string name="logtime_sufficient">Your log time is sufficient. Rest in peace</string>

    <string name="ask_quit">Quit the application.</string>
    <string name="ask_sure">Are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="login_empty">Login or password is missing</string>
    <string name="login_quit">Push a second time to quit the application</string>

    <string name="next_susie">My next SUSIE</string>
    <string name="register_to_susie">Get a SUSIE</string>
    <string name="next_activity">My next activity</string>
    <string name="next_submissions">My next submission</string>
    <string name="nothing_to_show">Nothing to show !</string>

    <string name="from">from</string>
    <string name="to">to</string>

    <string name="share_via">Share via&#8230;</string>
    <string name="share_title">Epiandroid - I\'m sharing my mark with you !</string>
    <string name="share_body">Hey ! I got %1$s for the project \"%2$s\".\n - Shared from EpiAndroid</string>

    <string name="action_settings">Settings</string>
    <string name="token_title">Validate your Token</string>
    <string name="token_validate">Validate</string>
    <string name="refresh">Refresh</string>

	<string name="prev_week">Prev</string>
	<string name="next_week">Next</string>

    <string name="planning_token">Token</string>
    <string name="planning_register">Register</string>
    <string name="planning_unregister">Unregister</string>
    <string name="planning_nothing">Nothing</string>
    <string name="planning_present">Present</string>
    <string name="ok">ok</string>

	<string name="subscribe">Suscribed for : %1$s</string>
	<string name="unsubscribe">UnSuscribed from : %1$s</string>
	<string name="token_done">Token validated for : %1$s</string>
    <string name="rest">Il vous reste </string>
    <string name="jours"> jours</string>
    <string name="start_proj">Ce projet commence dans </string>

</resources>
