<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#005DA1"
    android:nestedScrollingEnabled="false"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#005DA1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#005DA1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#005DA1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/next_susie"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="0dp"
                android:background="#006EB2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/susie_nothing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/nothing_to_show"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffffff"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/susie_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/susie_nothing"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:text="@string/register_to_susie"
                    android:textColor="#ffffffff" />

                <TextView
                    android:id="@+id/susie_date"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="false"
                    android:layout_centerVertical="true"
                    android:layout_gravity="right"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/susie_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/susie_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/susie_login"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="3dp"
                    android:layout_toEndOf="@+id/susie_login"
                    android:layout_toRightOf="@+id/susie_login"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/susie_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/susie_login"
                    android:layout_below="@+id/susie_login"
                    android:layout_marginBottom="10dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:visibility="gone" />

            </RelativeLayout>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#005DA1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/next_activity"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="0dp"
                android:background="#006EB2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rdv_nothing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/nothing_to_show"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffffff"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/rdv_date"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="false"
                    android:layout_centerVertical="true"
                    android:layout_gravity="right"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="28-08-2015 15:00:00"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/rdv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="Séance de coaching"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/rdv_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/rdv_title"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="3dp"
                    android:layout_toEndOf="@+id/rdv_title"
                    android:layout_toRightOf="@+id/rdv_title"
                    android:text="(coaching)"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:visibility="gone" />

                <com.gc.materialdesign.views.ProgressBarDeterminate
                    android:id="@+id/progress_rdv"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="false"
                    android:layout_alignStart="@+id/rdv_title"
                    android:layout_below="@+id/rdv_title"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="#1E88E5"
                    android:visibility="gone" />

            </RelativeLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#005DA1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/next_submissions"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/nothing_to_show"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffffff"
                android:visibility="gone"
                android:layout_gravity="center" />

            <LinearLayout
                android:id="@+id/next_submissions_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>